Update code to use .toList(), refactor and simplify tracking session retrieval methods.