@@ -16,7 +16,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class FleetModule implements FleetPort, OutputAdapter {
 
@@ -180,6 +179,6 @@ public class FleetModule implements FleetPort, OutputAdapter {
                         d.getPosition().coordinates().latitude(),
                         d.getPosition().coordinates().longitude(),
                         d.isCarryingPackage()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
